# dsir

./: .gitignore  LICENSE  README.md  config.sh  pyproject.toml  requirements.txt  setup.py
data_selection/: README.md  __init__.py  base.py  dsir_pipeline.py  hashed_ngram_dsir.py  is_pipeline.py  run_cmds.sh  run_dsir.sh  run_dsir_helper.sh  run_heuristic_cls.sh  run_heuristic_cls_helper.sh  run_is.sh  run_is_helper.sh  utils.py
data_selection/dsir_general/: data_selection.py  utils.py
dsir/: base.py  hashed_ngram_dsir.py
experimental/: README.md  config.sh  requirements.txt
experimental/data_selection/: dsir_pipeline.py  heuristic_cls_pipeline.py  run_dsir_helper.sh
experimental/data_selection/dsir_general/: data_selection.py  run_data_selection.py
experimental/glue_eval/: read_glue_results.py  run_glue.py
experimental/preprocessing/: reformat_and_chunk_data.py  run.sh  run_slurm.sh
experimental/train/: accelerate_config.yaml  model.py  preprocess_general.sh  run_pipeline.py  run_pretrain_pipeline_general.sh
glue_eval/: read_glue_results.py  run_eval_exps.sh  run_glue_dist.sh  run_glue_for_seed_task.sh
preprocessing/: combine.sh  merge_pile_subsets.sh  run.sh  run_slurm.sh
preprocessing/quality_scores/: compute_quality_stats.py  merge_quality_scores.py  run_quality_stats.sh  run_slurm_quality_stats.sh
tests/: test_hashed_ngram.py  test_utils.py  toy_pile_data.jsonl  toy_target_data.jsonl  toy_target_data_2.jsonl
train/: preprocess_general.sh  pretrain_general.sh  requirements.txt  run_pretrain_pipeline_general.sh  run_slurm.sh  trainer.py
(+3 files in other folders)
