[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-selection"
version = "1.0.3"
authors = [
  { name="Sang Michael Xie", email="xie@cs.stanford.edu" },
]
description = "Data Selection with Importance Resampling"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = { file = "LICENSE" }
keywords = ["data selection", "importance resampling", "dsir", "nlp", "language models"]
dependencies = [
    'numpy>=1.21.6',
    'tqdm>=4.62.3',
    'joblib>=1.1.0',
    'nltk>=3.8.1',
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/p-lambda/dsir"
